Bug 143580 - kf5: Combobox only shows entries after second click
Summary: kf5: Combobox only shows entries after second click
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE
  Show dependency treegraph
 
Reported: 2021-07-28 11:24 UTC by Michael Weghorn
Modified: 2021-10-12 10:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2021-07-28 11:24:24 UTC
Description:
kf5: Combobox only shows entries after second click

Steps to Reproduce:
0) use kf5 VCL plugin on Linux, e.g. by setting env var SAL_USE_VCLPLUGIN=kf5
1) start Writer
2) click on the arrow of the paragraph combobox (which initially shows "Default Paragraph Style") or another combo box like the one to select the font
3) click there once again

Actual Results:
The combobox only "expands" and shows possible values after step 3.

Expected Results:
 Combobox should expand and show available values after step 2 already.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 2b71e0683cf8a34aaddce3558b941ba62b1b4ec5
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: kf5 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 1 Michael Weghorn 2021-07-28 11:25:41 UTC
This is a regression from

commit 7e6fee830116823b9cd8e46d6962df4ea2bc1ea6
Author: Jan-Marek Glogowski <glogow@fbihome.de>
Date:   Mon Jul 19 22:13:21 2021 +0200

    Qt5 fix Qt::Popup window handling

Adding CC: to Jan-Marek Glogowski
Comment 2 Commit Notification 2021-07-30 18:26:00 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9dcf5816c90e9819861332f11e014ef7b78e2fe7

tdf#143580 Qt5 don't use Qt::Popup for FLOAT wins

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2021-07-30 20:20:15 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/ea2f19827db330a21c7962bdd13b1b838821bd4c

tdf#143580 Qt5 don't use Qt::Popup for FLOAT wins

It will be available in 7.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Weghorn 2021-07-30 20:21:56 UTC
Fix verified with above commit in place.
Comment 5 V Stuart Foote 2021-10-06 11:45:01 UTC
does https://gerrit.libreoffice.org/c/core/+/122449 revert fix and reintroduce behavior at 7.2.2?
Comment 6 Michael Weghorn 2021-10-12 10:06:22 UTC
(In reply to V Stuart Foote from comment #5)
> does https://gerrit.libreoffice.org/c/core/+/122449 revert fix and
> reintroduce behavior at 7.2.2?

No, it doesn't reintroduce the issue, since it not only reverts the fix for this bug, but also the commit that originally introduced it, s. comment 1. Commit msg says:

> This revert includes:
> 
> - "tdf#144037 Qt5 just close popup with mouse outside"
>   commit 7c1f4284562e905372b5c14b6017f1eb438f54b5
> - "tdf#143580 Qt5 don't use Qt::Popup for FLOAT wins"
>   commit ea2f19827db330a21c7962bdd13b1b838821bd4c
> - "Qt5 fix Qt::Popup window handling"
>   commit 7e6fee830116823b9cd8e46d6962df4ea2bc1ea6

(The last one is the relevant one.)
I just double-checked with 7-2 bibisect repo that it is fine.